--- a/public/styles/yujing.css
+++ b/public/styles/yujing.css
@@ -30,7 +30,7 @@ main {
 
 
 
-    grid-row-gap: 3em;
+    grid-row-gap: 2em;
 
 }
 
@@ -54,6 +54,7 @@ input:not(input:checked ~ input)
      display: grid;
     border-top: 2px solid hsl(0 0% 90% / 1);
     padding-top: 2em;
+    row-gap: 0.5em;
     /*justify-content: center;*/
     /*align-items: center;*/
     /*place-items: center;*/
@@ -63,7 +64,7 @@ input:not(input:checked ~ input)
     /*text-align: center;*/
     font-size: 2em;
     font-weight: bold;
-    margin-bottom: 1em;
+    margin-bottom: 0.2em;
 }
 .sectionUsers p{
     /*text-align: center;*/
@@ -141,7 +142,7 @@ dit word hergebruiks users op index en score pagina
 }
 
 /*herbgeruiken streep*/
-.houseInfo,.houseDetailsSection,.sectionUsers{
+.houseInfo,.houseDetailsSection{
     border-bottom:  2px solid hsl(0 0% 90% / 1);
     padding-bottom: 2em;
 }
@@ -171,7 +172,7 @@ hergebruiken op de pagina zelf
 .link{
     color: var(--lochmara-primary-color);
     text-decoration: none;
-    font-size: 1.2em;
+    font-size: 1.5em;
     font-weight: bold;
 
 }
@@ -200,6 +201,8 @@ einde hergebruiken op de pagina zelf
 .houseInfo{
 
     padding-top: 1em;
+    display: grid;
+    row-gap: 0.5em;
 
     /*background-color: red;*/
 }
@@ -216,7 +219,7 @@ einde hergebruiken op de pagina zelf
     /*justify-items: center;*/
     /*padding: 1em 2em 1em 2em;*/
     row-gap: 2em;
-    font-size: 1.1em;
+    font-size: 1.4em;
 
     line-height: 1.5em;
     max-width: 24em;
@@ -245,6 +248,7 @@ einde hergebruiken op de pagina zelf
     grid-template-columns: 1fr;
     column-gap: 1em;
     row-gap: 1em;
+
 }
 
 
@@ -258,7 +262,7 @@ einde hergebruiken op de pagina zelf
     /*grid-template-columns: auto auto auto;*/
     max-width: 100%;
     grid-column-gap: 2em;
-    grid-row-gap: 2em;
+    grid-row-gap: 2em;  padding-bottom: 2em;
     /*max-width: 16em;*/
 
     /*padding: 2em;*/
@@ -268,6 +272,7 @@ einde hergebruiken op de pagina zelf
 .formRatingItem__header{
     /*place-items: center;*/
     display: grid;
+    row-gap: 0.5em;
     /*text-align: center;*/
     /*row-gap: 1em;*/
 }
@@ -279,12 +284,16 @@ einde hergebruiken op de pagina zelf
     /*place-items: center;*/
     font-size: 2em;
     font-weight: bold;
+    margin-bottom: 0.2em;
 }
 
 .formRatingItem__Note{
     padding: 2em;
 }
 
+#note{
+    line-height: 1.5em;
+}
 
 
 
@@ -406,7 +415,7 @@ einde hergebruiken op de pagina zelf
 }
 #note{
     min-width: 18em;
-    height: 8em;
+    height: 11em;
     max-width: 800px;
     overflow: hidden;
     resize: vertical;
@@ -449,6 +458,7 @@ einde hergebruiken op de pagina zelf
     /*place-items: center;*/
     grid-column-gap: 3em;
     gap: 43px;
+    padding-top: 1em;
 }
 .usersListscore__li{
     display: grid;
@@ -476,7 +486,7 @@ einde hergebruiken op de pagina zelf
     justify-content: flex-start;
     background-color: var(--regent-blue-primary-color);
     padding: 2em;
-    margin: 1em;
+    /*margin: 1em;*/
     column-gap: 2em;
     row-gap: 1em;
     width: max-content;
