onnodige code weggehaald

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,7 +7,7 @@
 
 
 <!--    <link rel="stylesheet" href="/styles/style.css">-->
-    <link rel="stylesheet" href="/styles/test.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/assets/font/stylesheet.css">
     <link rel="stylesheet" href="/styles/yujing.css">    <script src="/scripts/scripts.js" type="module" defer></script>
     <script src="/scripts/animation.js" type="module" defer></script>
