fix score teamleden

--- a/public/styles/yujing.css
+++ b/public/styles/yujing.css
@@ -125,7 +125,7 @@ dit word hergebruiks users op index en score pagina
 
 .userListScore__image{
     width: 200px;
-    height: auto;
+    height: 142px;
     grid-row: 1;
     display: grid;
 }
