de scre van de teamleden staat vast

--- a/views/score.ejs
+++ b/views/score.ejs
@@ -220,7 +220,7 @@
 
 
                         <!--         algemeen-->
-                        <fieldset class="fieldsetRating">
+                        <fieldset class="fieldsetRating__second">
                             <legend class="titleRating">Algemeen</legend>
                             <input class="inputRating" id="algemeen1" name="algemeenNumber" type="radio" value="1">
                             <label aria-label="1 " for="algemeen1" class="labelRating__second"></label>
@@ -234,15 +234,15 @@
 
 
                             <input class="inputRating" id="algemeen4" name="algemeenNumber" type="radio" value="4">
-                            <label aria-label="4 sterren" for="algemeen4" class="labelRating"></label>
+                            <label aria-label="4 sterren" for="algemeen4" class="labelRating__gray"></label>
 
 
                             <input class="inputRating" id="algeemn5" name="algemeenNumber" type="radio" value="5">
-                            <label aria-label="5 sterren" for="algeemn5" class="labelRating"></label>
+                            <label aria-label="5 sterren" for="algeemn5" class="labelRating__gray"></label>
                         </fieldset>
 
                         <!--            keuken-->
-                        <fieldset class="fieldsetRating">
+                        <fieldset class="fieldsetRating__second">
                             <legend class="titleRating">Keuken</legend>
                             <input class="inputRating" id="keuken1" name="keukenNumber" type="radio" value="1">
                             <label aria-label="1 " for="keuken1" class="labelRating__second"></label>
@@ -253,18 +253,18 @@
 
 
                             <input class="inputRating" id="keuken3" name="keukenNumber" type="radio" value="3 ">
-                            <label aria-label="3 sterren" for="keuken3" class="labelRating"></label>
+                            <label aria-label="3 sterren" for="keuken3" class="labelRating__gray"></label>
 
 
                             <input class="inputRating" id="keuken4" name="keukenNumber" type="radio" value="4">
-                            <label aria-label="4 sterren" for="keuken4" class="labelRating"></label>
+                            <label aria-label="4 sterren" for="keuken4" class="labelRating__gray"></label>
 
 
                             <input class="inputRating" id="keuken5" name="keukenNumber" type="radio" value="5">
-                            <label aria-label="5 sterren" for="keuken5" class="labelRating"></label>
+                            <label aria-label="5 sterren" for="keuken5" class="labelRating__gray"></label>
                         </fieldset>
 
-                        <fieldset class="fieldsetRating">
+                        <fieldset class="fieldsetRating__second">
                             <legend class="titleRating">Badkamer</legend>
                             <input class="inputRating" id="badkamer1" name="badkamerNumber" type="radio" value="1">
                             <label aria-label="1 " for="badkamer1" class="labelRating__second"></label>
@@ -283,10 +283,10 @@
 
 
                             <input class="inputRating" id="badkamer5" name="badkamerNumber" type="radio" value="5">
-                            <label aria-label="5 sterren" for="badkamer5" class="labelRating"></label>
+                            <label aria-label="5 sterren" for="badkamer5" class="labelRating__gray"></label>
                         </fieldset>
 
-                        <fieldset class="fieldsetRating">
+                        <fieldset class="fieldsetRating__second">
                             <legend class="titleRating">Tuin</legend>
                             <input class="inputRating" id="Tuin1" name="tuinNumber" type="radio" value="1">
                             <label aria-label="1 " for="Tuin1" class="labelRating__second"></label>
