--- a/public/styles/yujing.css
+++ b/public/styles/yujing.css
@@ -313,6 +313,12 @@ einde hergebruiken op de pagina zelf
     display: flex;
     width: max-content;
     /*background-color: deepskyblue;*/
+}.fieldsetRating__second {
+    text-weight: bold;
+    border-color: var(--color-main-text);
+    display: flex;
+    width: max-content;
+    /*background-color: deepskyblue;*/
 }
 
 
@@ -335,6 +341,19 @@ einde hergebruiken op de pagina zelf
 .labelRating{
     color: #a4a2a2;
     /*background-color: #0071B3;*/
+}
+
+.labelRating__gray{
+
+    color: #a4a2a2;
+}
+
+.labelRating__gray:after{
+    width: 1.5em;
+    content: "★";
+    font-size: 2em;
+    display: grid;
+    place-items: center;
 }
 
 .labelRating__second:after{
