--- a/views/score.ejs
+++ b/views/score.ejs
@@ -7,7 +7,7 @@
         <p class="houseInfo__p">Hier kunt u een beoordeling geven over het huis of de score van anderen zien.
         </p>
         <ul>
-            <li>ga naar:</li>
+            <li>Ga naar:</li>
             <li class="animationLink">
                 <a href="#beoordeeling" class="link"> Beoordeel dit huis </a>
             </li>
