font size staat goed

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -292,8 +292,8 @@ body {
     & article {
       display: flex;
       /* flex-direction: column; */
+      /*font-size: 16px;*/
       padding: 10px;
-      font-size: 0.8em;
     }
   
     & img {
