--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
         <hr/>
         <p>In dit overzicht vind je al jouw favoriete huizen terug.</p>
     </header>
+    <h2>Zie teamleden</h2>
     <ul class="usersList">
         <% users.forEach(users => { %>
 
@@ -28,6 +29,7 @@
 
     </ul>
     <div class="container">
+        <h2>Huizen</h2>
         <div class="grid__container">
             <% alleHuizen.forEach((huis, index) => { %>
                 <div class="card__favorites">
