images staan goed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
 
                     <article>
                         <ol>
-                            <h2 class="card__content "><a class="card__link linkToHouse"
+                            <h2 class="card__content "><a class="card__link"
                                                          href="./huis/<%= huis.id %>"><%= huis.street %> <%= huis.house_nr %></a>
                             </h2>
                             <li class="card__content priceHouse">€ <%- huis.price.toLocaleString('nl-NL') %></li>
