--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -272,7 +272,13 @@ body {
       display: flex;
       flex-direction: column;
     }
-  
+
+    .card__list{
+      /*display: grid;*/
+      /*grid-row-gap: 1em;*/
+      /*grid-template-rows: 4em 2em 2em 2em 2em 2em 2em;*/
+
+    }
     .card__image {
       width: 100%;
       height: 276px;
