--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
                             </h2>
                             <li class="card__content priceHouse">€ <%- huis.price.toLocaleString('nl-NL') %></li>
                             <li class="card__content"><%- huis.postal_code %> <%- huis.city %></li>
-                            <li class="card__content">Opppervalke • <%- huis.m2 %> m²</li>
+                            <li class="card__content">Oppervlakte • <%- huis.m2 %> m²</li>
                             <li class="card__content">Kamers • <%- huis.rooms %></li>
                             <li class="card__content"><%- huis.agent %></li>
 
