--- a/views/score.ejs
+++ b/views/score.ejs
@@ -40,7 +40,7 @@
             </li>
             <li class="card__content priceHouse">€ <%- house.price.toLocaleString('nl-NL') %></li>
             <li class="card__content"><%- house.postal_code %> <%- house.city %></li>
-            <li class="card__content">Opppervalke • <%- house.m2 %> m²  </li>
+            <li class="card__content">Oppervlakte • <%- house.m2 %> m²  </li>
             <li class="card__content">Kamers • <%- house.rooms %> </li>
             <li class="card__content"><%- house.agent %></li>
 
