--- a/views/score.ejs
+++ b/views/score.ejs
@@ -210,7 +210,7 @@
                         </picture>
 
                     <% } else { %>
-                        <p>Er is geen user avatar</p>
+                        <p class="userListScore__image">Er is geen user avatar</p>
                     <% } %>
 
                     <!--                deze span meot hier staan als container dat alles mooi meebeweegt-->
